# Thesis-Severity

./: .gitignore  GEMINI.md  README.md  app_run.sh  config.json  pyproject.toml  run_app.sh  valid-patient.txt
apps/: ecg_inference_app.py
examples/: patient_01_clinical_features_raw_example.csv  patient_02_clinical_features_raw_example.csv  patient_07_clinical_features_raw_example.csv  patient_15_clinical_features_raw_example.csv
notebook-preprocess/: preprocess_ecg_pvc_crop.ipynb  training_yolo_pvc.ipynb
notebook-process/: feature_fusion_clinical_pvc_vit.ipynb  training_lightweight_outcome_severity.ipynb
